// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
      >
        <label
          class="uv_17td3g91 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r0»"
        >
          Test
        </label>
        <div
          aria-required="false"
          class="uv_yl1780 uv_yl1782 uv_yl1787 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u6p"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
            >
              <input
                aria-valuemax="23"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="hours-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_yl178a uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="minutes-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_yl178a uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="seconds-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
      >
        <label
          class="uv_17td3g91 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r4»"
        >
          Test
        </label>
        <div
          aria-required="false"
          class="uv_yl1780 uv_yl1782 uv_yl1787 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u6p"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
            >
              <input
                aria-valuemax="23"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="hours-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_yl178a uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="minutes-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_yl178a uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="seconds-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
